--- a/index.html
+++ b/index.html
@@ -3,52 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 2</title>
-    <!--<style>
-       #heading { 
-        text-transform: uppercase;
-       }
-       .h2 {
-        text-transform: lowercase;
-       }
-    </style>-->
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--inline tag-->
-    <!--<div style="background-color: rgb(153, 238, 209);
-    text-decoration: text-underline-offset ;
-    text-transform: uppercase;
-    color: brown ;
-    text-align: center;
-    width: fit-content; ">-->
-    <div>
+    <h1>grid</h1>
+    <!-- <div class="parent">
+    <div class="child header">header</div>
+    <div class="child menu">menu</div>
+    <div class="child main">main</div>
+    <div class="child main">right</div>
+    <div class="child footer">footer</div> -->
+    <!-- <div class="child">6</div>
+    <div class="child">7</div>
+    <div class="child">8</div>
+    <div class="child">9</div>
 
-    content
+    <div class="child">5</div>
+    <div class="child">6</div>
+    <div class="child">7</div>
+    <div class="child">8</div>
+    <div class="child">9</div> -->
+<div class="parent">
+    <div class="child green">green</div>
+    <div class="child yellow">yellow</div>
+    <div class="child red">red</div>
+    <div class="child blue">blue</div>
+    
+    
 
-<img src= "https://tse4.mm.bing.net/th?id=OIP.W8apTKARTqVhmLzMCisNmAHaEs&pid=Api&P=0&h=180">
 </div>
-
-
-     <!--   <p>
-            Lorem ipsum dolor, sit amet 
-            consectetur adipisicing elit. 
-            Tempore aut doloribus, beatae 
-            quia laborum perspiciatis corrupti?
-        </p>
-        </div>
-        <div id="heading">
-            heading 1
-        </div>
-        <div class="h1">
-            heading1
-        </div>
-        <div class="h2">
-            headingTwo : camelCase
-            heading-two : kebab-case
-            heading_two : snake_case
-            HeadingTwo : PascalCase
-        </div>
-    -->
 </body>
 </html>
