--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS script</title>
-    
+    <title>Document</title>
 </head>
 <body>
-    <div id="ht">
-        <h3 id="ht1" class="c1">
-            first dom class
-        </h3>
-        <p id="ht2" class="c1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium perferendis, quibusdam molestias perspiciatis aliquam ab possimus tempora natus adipisci cum a odio nisi inventore explicabo, ipsa maiores odit illum incidunt.
-        </p>
-    </div>
- <script src="script.js"></script>
+    <script src="asynch.js"></script>
 </body>
 </html>
